@@ -1,8 +1,5 @@
 /*
- * Original Author -> Harry Yang (taketoday@foxmail.com) https://taketoday.cn
- * Copyright © TODAY & 2017 - 2022 All Rights Reserved.
- *
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER
+ * Copyright 2017 - 2023 the original author or authors.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -28,13 +25,13 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Collections;
-import java.util.Iterator;
+import java.util.Map;
 import java.util.Properties;
 
 import cn.taketoday.beans.factory.BeanDefinitionStoreException;
 import cn.taketoday.beans.factory.FactoryBean;
 import cn.taketoday.beans.testfixture.beans.TestBean;
+import cn.taketoday.context.ApplicationContext;
 import cn.taketoday.context.ConfigurableApplicationContext;
 import cn.taketoday.core.annotation.AliasFor;
 import cn.taketoday.core.env.Environment;
@@ -59,29 +56,25 @@ class PropertySourceAnnotationTests {
 
   @Test
   void withExplicitName() {
-    AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
-    ctx.register(ConfigWithExplicitName.class);
-    ctx.refresh();
+    AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithExplicitName.class);
     assertThat(ctx.getEnvironment().getPropertySources().contains("p1")).as("property source p1 was not added").isTrue();
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
 
     // assert that the property source was added last to the set of sources
-    String name;
-    cn.taketoday.core.env.PropertySources sources = ctx.getEnvironment().getPropertySources();
-    Iterator<cn.taketoday.core.env.PropertySource<?>> iterator = sources.iterator();
-    do {
-      name = iterator.next().getName();
-    }
-    while (iterator.hasNext());
-
+    var sources = ctx.getEnvironment().getPropertySources();
+    String name = sources.stream().toList().get(sources.size() - 1).getName();
     assertThat(name).isEqualTo("p1");
+    ctx.close();
   }
 
   @Test
   void withImplicitName() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithImplicitName.class);
-    assertThat(ctx.getEnvironment().getPropertySources().contains("class path resource [cn/taketoday/context/annotation/p1.properties]")).as("property source p1 was not added").isTrue();
+    String name = "class path resource [cn/taketoday/context/annotation/p1.properties]";
+    assertThat(ctx.getEnvironment().getPropertySources().contains(name))
+            .as("property source p1 was not added").isTrue();
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+    ctx.close();
   }
 
   @Test
@@ -89,6 +82,7 @@ class PropertySourceAnnotationTests {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithTestProfileBeans.class);
     assertThat(ctx.containsBean("testBean")).isTrue();
     assertThat(ctx.containsBean("testProfileBean")).isTrue();
+    ctx.close();
   }
 
   /**
@@ -103,6 +97,7 @@ class PropertySourceAnnotationTests {
       ctx.refresh();
       // p2 should 'win' as it was registered last
       assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p2TestBean");
+      ctx.close();
     }
 
     {
@@ -111,6 +106,7 @@ class PropertySourceAnnotationTests {
       ctx.refresh();
       // p1 should 'win' as it was registered last
       assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+      ctx.close();
     }
   }
 
@@ -120,6 +116,7 @@ class PropertySourceAnnotationTests {
     ctx.register(ConfigWithImplicitName.class, WithCustomFactory.class);
     ctx.refresh();
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
+    ctx.close();
   }
 
   @Test
@@ -128,6 +125,7 @@ class PropertySourceAnnotationTests {
     ctx.register(ConfigWithImplicitName.class, WithCustomFactoryAsMeta.class);
     ctx.refresh();
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("P2TESTBEAN");
+    ctx.close();
   }
 
   @Test
@@ -141,6 +139,7 @@ class PropertySourceAnnotationTests {
   void withUnresolvablePlaceholderAndDefault() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithUnresolvablePlaceholderAndDefault.class);
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
+    ctx.close();
   }
 
   @Test
@@ -149,6 +148,7 @@ class PropertySourceAnnotationTests {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholder.class);
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
     System.clearProperty("path.to.properties");
+    ctx.close();
   }
 
   @Test
@@ -157,6 +157,7 @@ class PropertySourceAnnotationTests {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithResolvablePlaceholderAndFactoryBean.class);
     assertThat(ctx.getBean(TestBean.class).getName()).isEqualTo("p1TestBean");
     System.clearProperty("path.to.properties");
+    ctx.close();
   }
 
   @Test
@@ -169,37 +170,37 @@ class PropertySourceAnnotationTests {
   @Test
   void withNameAndMultipleResourceLocations() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
     // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    ctx.close();
   }
 
   @Test
   void withMultipleResourceLocations() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
     // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    ctx.close();
   }
 
   @Test
   void withRepeatedPropertySourcesInContainerAnnotation() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithPropertySources.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
     // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    ctx.close();
   }
 
   @Test
   void withRepeatedPropertySources() {
-    var ctx = new AnnotationConfigApplicationContext(ConfigWithRepeatedPropertySourceAnnotations.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-    // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    try (AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithRepeatedPropertySourceAnnotations.class)) {
+      assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+      // p2 should 'win' as it was registered last
+      assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    }
   }
 
   @Test
@@ -208,20 +209,17 @@ class PropertySourceAnnotationTests {
     String key = "custom.config.package";
 
     System.clearProperty(key);
-    ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-    // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
+      assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+      // p2 should 'win' as it was registered last
+      assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    }
 
     System.setProperty(key, "cn/taketoday/context/annotation");
-    try {
-      ctx = new AnnotationConfigApplicationContext(configClass);
-      assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-      assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-      assertThat(ctx.getEnvironment().containsProperty("from.p3")).isTrue();
+    try (ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(configClass)) {
+      assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3");
       // p3 should 'win' as it was registered last
-      assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p3TestBean");
+      assertEnvironmentProperty(ctx, "testbean.name", "p3TestBean");
     }
     finally {
       System.clearProperty(key);
@@ -229,12 +227,30 @@ class PropertySourceAnnotationTests {
   }
 
   @Test
+  void multipleComposedPropertySourceAnnotations() {  // gh-30941
+    ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(MultipleComposedAnnotationsConfig.class);
+    ctx.getBean(MultipleComposedAnnotationsConfig.class);
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+    // p5 should 'win' as it is registered via the last "locally declared" direct annotation
+    assertEnvironmentProperty(ctx, "testbean.name", "p5TestBean");
+    ctx.close();
+  }
+
+  @Test
+  void multipleResourcesFromPropertySourcePattern() {  // gh-21325
+    ConfigurableApplicationContext ctx = new AnnotationConfigApplicationContext(ResourcePatternConfig.class);
+    ctx.getBean(ResourcePatternConfig.class);
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2", "from.p3", "from.p4", "from.p5");
+    ctx.close();
+  }
+
+  @Test
   void withNamedPropertySources() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithNamedPropertySources.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
     // p2 should 'win' as it was registered last
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    ctx.close();
   }
 
   @Test
@@ -247,16 +263,16 @@ class PropertySourceAnnotationTests {
   @Test
   void withIgnoredPropertySource() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithIgnoredPropertySource.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+    ctx.close();
   }
 
   @Test
   void withSameSourceImportedInDifferentOrder() {
     AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithSameSourceImportedInDifferentOrder.class);
-    assertThat(ctx.getEnvironment().containsProperty("from.p1")).isTrue();
-    assertThat(ctx.getEnvironment().containsProperty("from.p2")).isTrue();
-    assertThat(ctx.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentContainsProperties(ctx, "from.p1", "from.p2");
+    assertEnvironmentProperty(ctx, "testbean.name", "p2TestBean");
+    ctx.close();
   }
 
   @Test
@@ -264,27 +280,40 @@ class PropertySourceAnnotationTests {
     // SPR-10820: p2 should 'win' as it was registered last
     AnnotationConfigApplicationContext ctxWithName = new AnnotationConfigApplicationContext(ConfigWithNameAndMultipleResourceLocations.class);
     AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithMultipleResourceLocations.class);
-    assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
-    assertThat(ctxWithName.getEnvironment().getProperty("testbean.name")).isEqualTo("p2TestBean");
+    assertEnvironmentProperty(ctxWithName, "testbean.name", "p2TestBean");
+    assertEnvironmentProperty(ctxWithoutName, "testbean.name", "p2TestBean");
+    ctxWithName.close();
+    ctxWithoutName.close();
   }
 
   @Test
-  void orderingWithAndWithoutNameAndFourResourceLocations() {
+  void orderingWithFourResourceLocations() {
     // SPR-12198: p4 should 'win' as it was registered last
-    AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
-    assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("p4TestBean");
+    AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext(ConfigWithFourResourceLocations.class);
+    assertEnvironmentProperty(ctx, "testbean.name", "p4TestBean");
+    ctx.close();
   }
 
   @Test
-  void orderingDoesntReplaceExisting() throws Exception {
+  void orderingDoesntReplaceExisting() {
     // SPR-12198: mySource should 'win' as it was registered manually
     AnnotationConfigApplicationContext ctxWithoutName = new AnnotationConfigApplicationContext();
-    MapPropertySource mySource = new MapPropertySource("mine", Collections.singletonMap("testbean.name", "myTestBean"));
+    MapPropertySource mySource = new MapPropertySource("mine", Map.of("testbean.name", "myTestBean"));
     ctxWithoutName.getEnvironment().getPropertySources().addLast(mySource);
     ctxWithoutName.register(ConfigWithFourResourceLocations.class);
     ctxWithoutName.refresh();
-    assertThat(ctxWithoutName.getEnvironment().getProperty("testbean.name")).isEqualTo("myTestBean");
+    assertEnvironmentProperty(ctxWithoutName, "testbean.name", "myTestBean");
+    ctxWithoutName.close();
+  }
 
+  private static void assertEnvironmentContainsProperties(ApplicationContext ctx, String... names) {
+    for (String name : names) {
+      assertThat(ctx.getEnvironment().containsProperty(name)).as("environment contains property '%s'", name).isTrue();
+    }
+  }
+
+  private static void assertEnvironmentProperty(ApplicationContext ctx, String name, Object value) {
+    assertThat(ctx.getEnvironment().getProperty(name)).as("environment property '%s'", name).isEqualTo(value);
   }
 
   @Configuration
@@ -414,8 +443,7 @@ class PropertySourceAnnotationTests {
   static class MyCustomFactory implements PropertySourceFactory {
 
     @Override
-    public cn.taketoday.core.env.PropertySource<?> createPropertySource(
-            String name, EncodedResource resource) throws IOException {
+    public cn.taketoday.core.env.PropertySource<?> createPropertySource(String name, EncodedResource resource) throws IOException {
       Properties props = PropertiesUtils.loadProperties(resource);
       return new cn.taketoday.core.env.PropertySource<>("my" + name, props) {
         @Override
@@ -472,6 +500,33 @@ class PropertySourceAnnotationTests {
   static class ConfigWithRepeatedPropertySourceAnnotationsOnComposedAnnotation {
   }
 
+  @Retention(RetentionPolicy.RUNTIME)
+  @PropertySource("classpath:cn/taketoday/context/annotation/p1.properties")
+  @interface PropertySource1 {
+  }
+
+  @Retention(RetentionPolicy.RUNTIME)
+  @PropertySource("classpath:cn/taketoday/context/annotation/p2.properties")
+  @PropertySources({
+          @PropertySource("classpath:cn/taketoday/context/annotation/p3.properties"),
+  })
+  @interface PropertySource23 {
+  }
+
+  @Configuration
+  @PropertySource1
+  @PropertySource23
+  @PropertySources({
+          @PropertySource("classpath:cn/taketoday/context/annotation/p4.properties")
+  })
+  @PropertySource("classpath:cn/taketoday/context/annotation/p5.properties")
+  static class MultipleComposedAnnotationsConfig {
+  }
+
+  @PropertySource("classpath*:cn/taketoday/context/annotation/p?.properties")
+  static class ResourcePatternConfig {
+  }
+
   @Configuration
   @PropertySources({
           @PropertySource(name = "psName", value = "classpath:cn/taketoday/context/annotation/p1.properties"),
@@ -511,7 +566,6 @@ class PropertySourceAnnotationTests {
   })
   @Configuration
   static class ConfigWithSameSourceImportedInDifferentOrder {
-
   }
 
   @Configuration
